Update and rename .env.sample to .env.local

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ NEXT_PUBLIC_INSTANTSEARCH_INDEX_NAME=STAGING_pwa_ecom_ui_template_products
 NEXT_PUBLIC_INSTANTSEARCH_QUERY_SUGGESTIONS_INDEX_NAME=STAGING_pwa_ecom_ui_template_products_query_suggestions
 
 # CLI credentials (to be replaced with yours)
-CLI_APP_ID=
+CLI_APP_ID=I8Q0D8QG6A
 CLI_ADMIN_API_KEY=
 
 # Google Analytics (to be replaced with yours)
